# ai-control-center

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.claude/: dashboard.html
.claude-plugin/: marketplace.json  plugin.json
.codex/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  dashboard_improvement.md  detector_request.md  docs_improvement.md  provider_adapter_request.md
.github/workflows/: agent-context-dashboard.yml
.playwright-mcp/: page-2026-05-30T14-14-52-536Z.yml
commands/: dashboard.md
docs/: index.html
docs/demo/: dashboard.html
docs/specs/: 2026-05-31-ui-ux-pass.md  phase-4-packaging.md  phase-4a-find.md  phase-4b-relationships.md
docs/vision/: ai-control-center-mission.html
examples/: README.md
examples/claude-codex-cursor/: AGENTS.md  CLAUDE.md  README.md
examples/mcp-and-skills/: .mcp.json  CLAUDE.md  README.md
examples/minimal/: CLAUDE.md  README.md
skills/agent-context-center/: SKILL.md
templates/: dashboard.html.tmpl
tests/: builders.py  test_adapter_base.py  test_appjs_guard.py  test_builders.py  test_claude_adapter.py  test_codex_adapter.py  test_config.py  test_cursor_adapter.py  test_digest.py  test_doctor.py  test_frontmatter.py  test_generate.py  test_generic_adapter.py  test_ids.py  test_markdown.py  test_owner_rule.py  test_packaging.py  test_redaction.py  test_relationships.py  test_render.py  test_render_dom.py  test_repo_name.py  test_scan.py  test_schema.py
(+44 files in other folders)
