[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-control-center"
version = "1.2.0"
description = "Agent Context Center — one offline HTML dashboard for a repo's AI context files (AGENTS.md, CLAUDE.md, Cursor rules, skills, hooks, commands, MCP, docs)"
requires-python = ">=3.12"

[project.optional-dependencies]
test = ["pytest", "pytest-playwright"]

[project.scripts]
acc = "acc.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
acc = ["templates/*.tmpl", "templates/*.css", "templates/*.js"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
